src-tauri/tests/trybuild/flat_context_barrel.rs
use app::contexts::JobSettings;

fn main() {
    let _ = JobSettings::default();
}